This file documents the revision history for the Monitoring Webinterface Thruk.

0.84    Wed ...
          - configurable plugins path
          - added missing image for the Nuvola theme
          - fixed tmp_path option
          - fixed accessing logfiles from changing backends

0.82.1  Wed Feb  9 15:27:54 CET 2011
          - fixed encoding problem with french date format

0.82    Mon Feb  7 23:40:50 CET 2011
          - fixed excel export with special characters in plugin output
          - fixed Undefined subroutine &FCGI::ProcManager::MaxRequestsThruk::self_or_default error

0.80    Sun Jan 30 14:07:49 CET 2011
          - fixed backends using groups authentication
          - fixed parsing of resource.cfg when macros are used twice
          - fixed macro expansion when using commands like check_test!

0.78.2  Tue Jan 18 10:29:08 CET 2011
          - minor fixes for OMD integration
          - fixed url for pager when using thruk with url prefix

0.78.1  Tue Jan 18 10:29:08 CET 2011
          - fixed macro expansion

0.78    Sun Jan 16 14:44:55 CET 2011
          - added new Theme (Wakizashi, thanks Jean)
          - added root problems plugin (thanks Jean) *shinken backend only
          - added new config option for default statusmap settings
          - added new config option title_prefix
          - fixed problem with custom timerange for availability reports
          - fixed minor problems when using the shinken backend

0.76.1  Wed Dec 29 11:28:03 CET 2010
          - fixed error when host/service has no command defined

0.76    Sun Dec 26 21:28:35 CET 2010
          - added full command line to host / service extinfo page (show_full_commandline option)
          - added user_template_path config option to specify additional template paths
          - added "link to this page" button on host/status details page
          - made configuration page more readable
          - added paging to config page

0.74    Sat Dec 18 13:45:08 CET 2010